Kubernetes/dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-backend-prod
  labels:
    app: nodejs-backend-prod
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-backend-prod
  template:
    metadata:
      labels:
        app: nodejs-backend-prod
    spec:
      containers:
      - name: nodejs-backend-prod
        image: CONTAINER_IMAGE # 971764590821.dkr.ecr.eu-central-1.amazonaws.com/backend-dev:v1.0
        ports:
        - containerPort: 3000
